fix: checkbox bubbles data to form

--- a/src/home/css/Hire.css
+++ b/src/home/css/Hire.css
@@ -630,7 +630,7 @@ a {
   margin-left: 0 !important;
 }
 
-.serviceslide-afterbtn {
+.serviceslide-btn.after {
   margin-left: 0 !important;
   background-color: black !important;
   padding-top: 5px !important;
