fix: Lighthouse score bumped from 19 to 60/80

--- a/src/home/css/about.css
+++ b/src/home/css/about.css
@@ -1,279 +1,278 @@
-.about{
-    width: 100%;
-    padding-bottom: 30px;
-    transition: all 0.5s ease-in-out;
+.about {
+  width: 100%;
+  padding-bottom: 30px;
+  transition: all 0.5s ease-in-out;
 }
 
-.about-none{
-    width: 100%;
-    padding-bottom: 30px;
-    transition: all 0.5s ease-in-out;
+.about-none {
+  width: 100%;
+  padding-bottom: 30px;
+  transition: all 0.5s ease-in-out;
 }
 
-.largeabout{
-    width: 100%;
-    padding-bottom: 30px;
-    margin: auto;
+.largeabout {
+  width: 100%;
+  padding-bottom: 30px;
+  margin: auto;
 }
 
-.largeabout-container{
-    width: 1400px;
-    margin: auto;
+.largeabout-container {
+  width: 1400px;
+  margin: auto;
 }
 
-.aboutfirst{
-    width: 95%;
-    display: flex;
-    padding-top: 20px;
-    justify-content: center;
-    margin: auto;
-    opacity: 1;
-    transition: all 0.5s ease-in-out;
+.aboutfirst {
+  width: 95%;
+  display: flex;
+  padding-top: 20px;
+  justify-content: center;
+  margin: auto;
+  opacity: 1;
+  transition: all 0.5s ease-in-out;
 }
 
-.aboutColor{
-    transition: all 0.5s ease-in-out;
-    opacity: 1;
+.aboutColor {
+  transition: all 0.5s ease-in-out;
+  opacity: 1;
 }
 
-.aboutColor-none{
-    transition: all 0.5s ease-in-out;
-    opacity: 0;
+.aboutColor-none {
+  transition: all 0.5s ease-in-out;
+  opacity: 0;
 }
 
-.yellowtab{
-    width: 36%;
-    height: fit-content !important;
-    margin-right: -10%;
-    margin-bottom: -20px;
+.yellowtab {
+  width: 36%;
+  height: fit-content !important;
+  margin-right: -10%;
+  margin-bottom: -20px;
 }
 
-.tabcontainer{
-    width: 95%;
-    display: flex;
-    flex-flow: column;
-    padding-left: 20px;
-    padding-bottom: 30px;
-    background: #EEEA64;
+.tabcontainer {
+  width: 95%;
+  display: flex;
+  flex-flow: column;
+  padding-left: 20px;
+  padding-bottom: 30px;
+  background: #eeea64;
 }
 
-.heading{
-    padding-top: 30px;
-font-family: 'Cabin',sans-serif;
-font-style: normal;
-font-weight: bold;
-font-size: 16px;
-line-height: 19px;
-text-transform: uppercase;
-color: #F7008C;
+.heading {
+  padding-top: 30px;
+  font-family: "Cabin", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  text-transform: uppercase;
+  color: #f7008c;
 }
 
-.abouth1{
-font-family: 'Work Sans', sans-serif;
-font-style: normal;
-font-weight: bold;
-font-size: 28px;
-line-height: 33px;
-color: #F7008C;
-flex: none;
-order: 1;
-flex-grow: 0;
-margin: 8px 0px;
-width: 80%;
+.abouth1 {
+  font-family: "Work Sans", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 33px;
+  color: #f7008c;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+  margin: 8px 0px;
+  width: 80%;
 }
 
-.aboutpara{
-    font-family: 'Work Sans', sans-serif;
-font-style: normal;
-font-weight: normal;
-font-size: 16px;
-line-height: 22px;
-color: #202020;
-flex: none;
-order: 2;
-flex-grow: 0;
-margin: 8px 0px;
-width: 90%;
+.aboutpara {
+  font-family: "Work Sans", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 22px;
+  color: #202020;
+  flex: none;
+  order: 2;
+  flex-grow: 0;
+  margin: 8px 0px;
+  width: 90%;
 }
 
-.aboutbtn{
-    background-color: transparent !important;
-    border: 1px solid rgb(247, 0, 140) !important;
-    padding-left: 25.6px;
-    padding-right: 25.6px;
-    padding-top: 12.8px;
-    padding-bottom: 12.8px;
-    border-radius: 50px;
-    width: fit-content;
-    cursor: pointer;
-    font-family: 'Cabin', sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-    text-transform: uppercase;
-    color: #F7008C;
-    margin: auto;
+.aboutbtn {
+  background-color: transparent !important;
+  border: 1px solid rgb(247, 0, 140) !important;
+  padding-left: 25.6px;
+  padding-right: 25.6px;
+  padding-top: 12.8px;
+  padding-bottom: 12.8px;
+  border-radius: 50px;
+  width: fit-content;
+  cursor: pointer;
+  font-family: "Cabin", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #f7008c;
+  margin: auto;
 }
 
-.aboutbtn:hover{
-    background-color: #F7008C !important;
-    border: 1px solid rgb(247, 0, 140) !important;
-    padding-left: 25.6px;
-    padding-right: 25.6px;
-    padding-top: 12.8px;
-    padding-bottom: 12.8px;
-    border-radius: 50px;
-    width: fit-content;
-    cursor: pointer;
-    font-family: 'Cabin', sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-    text-transform: uppercase;
-    color: #fff;
-    margin: auto;
+.aboutbtn:hover {
+  background-color: #f7008c !important;
+  border: 1px solid rgb(247, 0, 140) !important;
+  padding-left: 25.6px;
+  padding-right: 25.6px;
+  padding-top: 12.8px;
+  padding-bottom: 12.8px;
+  border-radius: 50px;
+  width: fit-content;
+  cursor: pointer;
+  font-family: "Cabin", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #fff;
+  margin: auto;
 }
 
-.aboutvideo{
-    width: 65%;
-    display: flex;
-    height: 430px;
-    justify-content: center;
-    margin-top: 45px;
-    margin-bottom: -40px;
+.aboutvideo {
+  width: 65%;
+  display: flex;
+  height: 430px;
+  justify-content: center;
+  margin-top: 45px;
+  margin-bottom: -40px;
 }
 
-.sliderbox{
-    margin-top: 20px !important;
-    width: 90%;
-    margin: auto;
-    display: flex;
+.sliderbox {
+  margin-top: 20px !important;
+  width: 90%;
+  margin: auto;
+  display: flex;
 }
 
-.slider{
-    margin-left: 50px;
-    width: 67%;
-    transition: all 0.5s ease-in-out;
+.slider {
+  margin-left: 50px;
+  width: 67%;
+  transition: all 0.5s ease-in-out;
 }
 
-.slidercover{
-    width: 280px;
-    margin-top: -20px !important;
-    background-color: white;
-    display: flex;
-    flex-flow: column nowrap;
-    padding-bottom: 20px;
-    z-index: 99;
+.slidercover {
+  width: 280px;
+  margin-top: -20px !important;
+  background-color: white;
+  display: flex;
+  flex-flow: column nowrap;
+  padding-bottom: 20px;
+  z-index: 99;
 }
 
-.slidecontainer{
-    width: 95%;
-    display: flex;
-    flex-flow: column;
-    padding-left: 20px;
+.slidecontainer {
+  width: 95%;
+  display: flex;
+  flex-flow: column;
+  padding-left: 20px;
 }
 
-.sliderheading{
-    font-family: 'Cabin',sans-serif;
-font-style: normal;
-font-weight: bold;
-font-size: 16px;
-line-height: 19px;
-text-transform: uppercase;
-color: #202020;
-padding-top: 15px;
+.sliderheading {
+  font-family: "Cabin", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  text-transform: uppercase;
+  color: #202020;
+  padding-top: 15px;
 }
 
-.sliderh1{
-    font-family: 'Work Sans', sans-serif;
-font-style: normal;
-font-weight: bold;
-font-size: 28px;
-line-height: 33px;
-color: #202020;
-margin-top: 10px;
+.sliderh1 {
+  font-family: "Work Sans", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 33px;
+  color: #202020;
+  margin-top: 10px;
 }
 
-.sliderbtn{
-    background-color: black !important;
-    border: 1px solid black !important;
-    padding-left: 25.6px;
-    padding-right: 25.6px;
-    padding-top: 12.8px;
-    padding-bottom: 12.8px;
-    border-radius: 50px;
-    width: fit-content;
-    cursor: pointer;
-    font-family: 'Cabin', sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-    text-transform: uppercase;
-    color: white;
+.sliderbtn {
+  background-color: black !important;
+  border: 1px solid black !important;
+  padding-left: 25.6px;
+  padding-right: 25.6px;
+  padding-top: 12.8px;
+  padding-bottom: 12.8px;
+  border-radius: 50px;
+  width: fit-content;
+  cursor: pointer;
+  font-family: "Cabin", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  text-transform: uppercase;
+  color: white;
 }
 
-.sliderbtn:hover{
-    background-color: transparent !important;
-    border: 1px solid black !important;
-    padding-left: 25.6px;
-    padding-right: 25.6px;
-    padding-top: 12.8px;
-    padding-bottom: 12.8px;
-    border-radius: 50px;
-    width: fit-content;
-    cursor: pointer;
-    font-family: 'Cabin', sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-    text-transform: uppercase;
-    color: black;
+.sliderbtn:hover {
+  background-color: transparent !important;
+  border: 1px solid black !important;
+  padding-left: 25.6px;
+  padding-right: 25.6px;
+  padding-top: 12.8px;
+  padding-bottom: 12.8px;
+  border-radius: 50px;
+  width: fit-content;
+  cursor: pointer;
+  font-family: "Cabin", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  text-transform: uppercase;
+  color: black;
 }
 
-.slide{
-    margin-top: 40px;
+.slide {
+  margin-top: 40px;
 }
 
-.sliderimg{
-    display: flex !important;
-    align-items: center;
-    justify-content: center;
+.sliderimg {
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
 }
 
-img.sliderimg{
-    width: 80%;
-    display: flex !important;
-    align-items: center;
-    margin: auto;
-    justify-content: center;
+img.sliderimg {
+  width: 80%;
+  display: flex !important;
+  align-items: center;
+  margin: auto;
+  justify-content: center;
 }
 
-.sliderin{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    outline: none;
+.sliderin {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  outline: none;
 }
 
-
-.sliderfill{
-    margin-left: 50px;
-    width: 67%;
-    transition: all 0.5s ease-in-out;
-    filter: invert()brightness(3);
+.sliderfill {
+  margin-left: 50px;
+  width: 67%;
+  transition: all 0.5s ease-in-out;
+  filter: invert() brightness(3);
 }
 
-.slick-slide{
-    height: 100%;
+.slick-slide {
+  height: 100%;
 }
 
 /* .slick-slide img{
@@ -282,226 +281,225 @@ img.sliderimg{
     justify-content: center;
 } */
 
-.slick-slide img:focus{
-    outline: 0 !important;
+.slick-slide img:focus {
+  outline: 0 !important;
 }
 
-.slick-track{
-    /* width: 100% !important; */
-    display: flex !important;
-    align-items: center;
-    justify-content: center;
-    margin-right: 0 !important;
+.slick-track {
+  /* width: 100% !important; */
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
+  margin-right: 0 !important;
 }
 
-.imag{
-    width: 100% !important;
-    margin-left: 10%;
+.imag {
+  width: 100% !important;
+  margin-left: 10%;
 }
 
-.ifade{
-    margin-left: 10%;
-    width: 100%;
+.ifade {
+  margin-left: 10%;
+  width: 100%;
 }
 
-.frame{
-    display: none;
+.frame {
+  display: none;
 }
 
-.fade{
-    width: 100%;
+.fade {
+  width: 100%;
 }
 
-.pict{
-    width: 100%;
-    height: 100%;
+.pict {
+  width: 100%;
+  height: 100%;
 }
 
-img.tab-pict{
-    width: 100%;
-    height: 400px;
+img.tab-pict {
+  width: 100%;
 }
 
-.center{
-    display: flex;
-    justify-content: center;
+.center {
+  display: flex;
+  justify-content: center;
 }
 
 /*mobile starts*/
 
-.mobcontainer{
-    width: 100%;
-    display: flex;
-    flex-flow: column;
-    padding-bottom: 30px;
+.mobcontainer {
+  width: 100%;
+  display: flex;
+  flex-flow: column;
+  padding-bottom: 30px;
 }
 
-.mobheading{
-    font-family: 'Cabin',sans-serif;
-font-style: normal;
-font-weight: bold;
-font-size: 16px;
-line-height: 19px;
-text-transform: uppercase;
-color: #ffffff;
-padding-top: 10px;
-padding-left: 10px;
-margin-bottom: 0 !important;
+.mobheading {
+  font-family: "Cabin", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  text-transform: uppercase;
+  color: #ffffff;
+  padding-top: 10px;
+  padding-left: 10px;
+  margin-bottom: 0 !important;
 }
 
-.mobh1{
-    font-family: 'Work Sans', sans-serif;
-font-style: normal;
-font-weight: bold;
-font-size: 28px;
-padding-left: 10px;
-line-height: 33px;
-color: #fff;
-margin-top: 10px;
+.mobh1 {
+  font-family: "Work Sans", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 28px;
+  padding-left: 10px;
+  line-height: 33px;
+  color: #fff;
+  margin-top: 10px;
 }
 
-.mobaboutbtn{
-    background-color: white !important;
-    border: 1px solid white !important;
-    padding-left: 25.6px;
-    padding-right: 25.6px;
-    padding-top: 12.8px;
-    padding-bottom: 12.8px;
-    border-radius: 50px;
-    width: fit-content;
-    cursor: pointer;
-    font-family: 'Cabin', sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-    text-transform: uppercase;
-    color: #202020;
-    margin: auto;
-    margin-top: 15px;
+.mobaboutbtn {
+  background-color: white !important;
+  border: 1px solid white !important;
+  padding-left: 25.6px;
+  padding-right: 25.6px;
+  padding-top: 12.8px;
+  padding-bottom: 12.8px;
+  border-radius: 50px;
+  width: fit-content;
+  cursor: pointer;
+  font-family: "Cabin", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #202020;
+  margin: auto;
+  margin-top: 15px;
 }
 
-.mobaboutbtn-black{
-    background-color: black !important;
-    border: 1px solid black !important;
-    padding-left: 25.6px;
-    padding-right: 25.6px;
-    padding-top: 12.8px;
-    padding-bottom: 12.8px;
-    border-radius: 50px;
-    width: fit-content;
-    cursor: pointer;
-    font-family: 'Cabin', sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-    text-transform: uppercase;
-    color: white;
-    margin: auto;
-    margin-top: 15px;
+.mobaboutbtn-black {
+  background-color: black !important;
+  border: 1px solid black !important;
+  padding-left: 25.6px;
+  padding-right: 25.6px;
+  padding-top: 12.8px;
+  padding-bottom: 12.8px;
+  border-radius: 50px;
+  width: fit-content;
+  cursor: pointer;
+  font-family: "Cabin", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  text-transform: uppercase;
+  color: white;
+  margin: auto;
+  margin-top: 15px;
 }
 
-.mobaboutbtn-black:hover{
-    background-color: white !important;
-    border: 1px solid black !important;
-    padding-left: 25.6px;
-    padding-right: 25.6px;
-    padding-top: 12.8px;
-    padding-bottom: 12.8px;
-    border-radius: 50px;
-    width: fit-content;
-    cursor: pointer;
-    font-family: 'Cabin', sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-    text-transform: uppercase;
-    color: black;
-    margin: auto;
-    margin-top: 15px;
+.mobaboutbtn-black:hover {
+  background-color: white !important;
+  border: 1px solid black !important;
+  padding-left: 25.6px;
+  padding-right: 25.6px;
+  padding-top: 12.8px;
+  padding-bottom: 12.8px;
+  border-radius: 50px;
+  width: fit-content;
+  cursor: pointer;
+  font-family: "Cabin", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  text-transform: uppercase;
+  color: black;
+  margin: auto;
+  margin-top: 15px;
 }
 
-.mobaboutbtn:hover{
-    background-color: black !important;
-    border: 1px solid black !important;
-    padding-left: 25.6px;
-    padding-right: 25.6px;
-    padding-top: 12.8px;
-    padding-bottom: 12.8px;
-    border-radius: 50px;
-    width: fit-content;
-    cursor: pointer;
-    font-family: 'Cabin', sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-    text-transform: uppercase;
-    color: white;
-    margin: auto;
-    margin-top: 15px;
+.mobaboutbtn:hover {
+  background-color: black !important;
+  border: 1px solid black !important;
+  padding-left: 25.6px;
+  padding-right: 25.6px;
+  padding-top: 12.8px;
+  padding-bottom: 12.8px;
+  border-radius: 50px;
+  width: fit-content;
+  cursor: pointer;
+  font-family: "Cabin", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  text-transform: uppercase;
+  color: white;
+  margin: auto;
+  margin-top: 15px;
 }
 
-.mob-container{
-    width: 100%;
-    margin: auto;
-    margin-top: -2%;
-    margin-bottom: -3%;
+.mob-container {
+  width: 100%;
+  margin: auto;
+  margin-top: -2%;
+  margin-bottom: -3%;
 }
 
-.mob-containerfill{
-    filter: brightness(0.5);
-    transition: all 0.5s ease-in-out;
-    width: 100%;
-    margin: auto;
-    margin-top: -2%;
-    margin-bottom: -3%;
+.mob-containerfill {
+  filter: brightness(0.5);
+  transition: all 0.5s ease-in-out;
+  width: 100%;
+  margin: auto;
+  margin-top: -2%;
+  margin-bottom: -3%;
 }
 
-.tab-container{
-    width: 95%;
-    margin: auto;
+.tab-container {
+  width: 95%;
+  margin: auto;
 }
 
-.btncenter{
-    display: flex;
-    justify-content: center;
+.btncenter {
+  display: flex;
+  justify-content: center;
 }
 
-.mob-frame{
-    width: 95%;
-    margin: auto;
+.mob-frame {
+  width: 95%;
+  margin: auto;
 }
 
-.mob-framefill{
-    width: 95%;
-    margin: auto;
-    transition: all 0.5s ease-in-out;
-    filter: brightness(0.5) !important;
+.mob-framefill {
+  width: 95%;
+  margin: auto;
+  transition: all 0.5s ease-in-out;
+  filter: brightness(0.5) !important;
 }
 
-.mobslide{
-    margin-top: 5px;
+.mobslide {
+  margin-top: 5px;
 }
 
-.yellowtabmob{
-    width: 100%;
-    background-color: #EEEA64;
-    padding: 25px 10px 45px;
-    display: flex;
+.yellowtabmob {
+  width: 100%;
+  background-color: #eeea64;
+  padding: 25px 10px 45px;
+  display: flex;
 }
 
-.alignbtn{
-    width: 100%;
-    display: flex;
-    margin: auto;
-    justify-content: center;
+.alignbtn {
+  width: 100%;
+  display: flex;
+  margin: auto;
+  justify-content: center;
 }
 
 /*mobile ends*/
