--- a/src/components/css/Nav.css
+++ b/src/components/css/Nav.css
@@ -46,7 +46,7 @@ header{
     position: fixed;
     background-color: #F7008C;
     z-index: 999;
-    transition: all 0.5s ease-in-out;
+    transition: all 0.8s ease-in-out;
     padding-bottom: 40px;
 }
 
@@ -55,10 +55,9 @@ header{
     height: 100%;
     position: fixed;
     background-color: #F7008C;
-    transition: all 0.5s ease-in-out;
+    transition: all 0.8s ease-in-out;
     z-index: 999;
 }
-
 
 .container-nav {
     width: 98%;
@@ -137,6 +136,18 @@ header{
 
 .MuiCollapse-wrapperInner{
     height: 100%;
+}
+
+.ani1{
+    --animate-duration: 1s;
+}
+
+.ani2{
+    --animate-duration: 1.5s;
+}
+
+.ani3{
+    --animate-duration: 2s;
 }
 
 /**/
