--- a/src/home/css/Hire.css
+++ b/src/home/css/Hire.css
@@ -16,11 +16,6 @@
   align-items: center;
 }
 
-.slick-slide div{
-  width: fit-content;
-  margin: auto;
-}
-
 .largehire {
   width: 100%;
   transition: all 0.5s ease-in-out;
@@ -87,7 +82,7 @@
 }
 
 .hire-container {
-  width: 80%;
+  width: 90%;
   display: flex;
   justify-content: space-evenly;
   margin: auto;
@@ -592,8 +587,9 @@ a {
 
 .serviceslider-btn {
   background-color: transparent !important;
-  padding: 5px;
-  width: fit-content;
+  padding-top: 5px !important;
+  padding-bottom: 5px !important;
+  width: 95%;
   border-radius: 50px;
   white-space: nowrap;
   cursor: pointer;
@@ -660,7 +656,7 @@ a {
 .serviceslider-btn.after {
   background-color: black !important;
   padding: 5px;
-  width: fit-content;
+  width: 100%;
   border-radius: 50px;
   white-space: nowrap;
   cursor: pointer;
