--- a/src/home/css/Hire.css
+++ b/src/home/css/Hire.css
@@ -655,8 +655,9 @@ a {
 
 .serviceslider-btn.after {
   background-color: black !important;
-  padding: 5px;
-  width: 100%;
+  padding-top: 5px !important;
+  padding-bottom: 5px !important;
+  width: 95%;
   border-radius: 50px;
   white-space: nowrap;
   cursor: pointer;
