--- a/src/home/css/Hire.css
+++ b/src/home/css/Hire.css
@@ -57,7 +57,7 @@
 }
 
 .desktitle-container {
-  width: 80%;
+  width: 90%;
   display: flex;
   margin: auto;
   justify-content: flex-start;
@@ -650,7 +650,7 @@ a {
   text-transform: uppercase;
   margin-bottom: 3px !important;
   margin-top: 0;
-  border: 1px solid #202020 !important;
+  border: 1px solid #20202025 !important;
 }
 
 .serviceslider-btn.after {
