--- a/src/home/css/Hire.css
+++ b/src/home/css/Hire.css
@@ -154,7 +154,7 @@ input[type="email"] {
 }
 
 .location-title {
-  width: 200px;
+  width: 50%;
   margin-top: 0 !important;
   font-family: "Work Sans", sans-serif;
   font-style: normal;
